<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plane_segmentation_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hosogaya.hirotaka@gmail.com">hosogaya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>elevation_mapping_ros2</depend>
  <!-- <depend>elevation_mapping_ros2_post_processor</depend> -->
  <depend>elevation_ccl</depend>
  <depend>convex_plane_extractor</depend>
  <depend>Eigen3</depend>
  <depend>PCL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
